packages/typ/tests/fixtures/diagnostics/0948_gadt_local_abstract_return_mismatch_09.ml.expected
File "0948_gadt_local_abstract_return_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0948_gadt_local_abstract_return_mismatch_09 is not a valid module name.

File "0948_gadt_local_abstract_return_mismatch_09.ml", line 9, characters 20-21:
9 |     | WBool_iota -> x
                        ^
Error: The value x has type a = bool but an expression was expected of type
         int
